# restAPI

./: index.py  pyproject.toml  requirements.txt
project/: .env  __init__.py  app.py  pyproject.toml
project/database/: db.py
project/database/models/: stock.py  user.py
project/project/: app.py
project/project/database/models/: stock.py  suppliers.py  user.py
project/project/resources/: auth.py  errors.py  routes.py  suppliers.py
project/resources/: auth.py  routes.py  stock.py  suppliers.py  user.py
