[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["xerio1001 <dariovanhasselt@hotmail.be>"]

[tool.poetry.dependencies]
python = "3.9.6"
Flask = "^2.0.3"
mongoengine = "^0.24.0"
Flask-RESTful = "^0.3.9"
flask-mongoengine = "^1.0.0"
Flask-Bcrypt = "^0.7.1"
Flask-JWT-Extended = "^4.3.1"
python-dotenv = "^0.19.2"
Werkzeug = "~=2.0.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
